# mcp-multivision-server

./: .env.example  Dockerfile  README.md  docker-compose.yaml  pyproject.toml  requirements.txt
.github/workflows/: build-release.yaml
src/mcp_multivision_server/: __init__.py  server.py
src/mcp_multivision_server/media/: __init__.py  cv.py  ffmpeg.py  imageinfo.py  inputs.py
src/mcp_multivision_server/providers/: __init__.py  base.py  openai_compat.py
