[project]
name = "mcp-multivision-server"
version = "1.0.0"
description = "MCP Multivision Server - Image and video analysis tools for LLM agents (local ffmpeg/OpenCV preprocessing + OpenAI-compatible vision models)"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
    { name = "ganyu" }
]
keywords = ["mcp", "vision", "multimodal", "image", "video", "ocr", "vlm", "server"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "mcp>=1.0.0",
    "httpx>=0.27.0",
    "pydantic>=2.0.0",
    "python-dotenv>=1.0.0",
    "pillow>=10.0.0",
    "opencv-python-headless>=4.8.0,<5.0.0",
    "numpy>=1.24.0",
]

[project.optional-dependencies]
sse = [
    "starlette>=0.37.0",
    "uvicorn>=0.30.0",
]

[project.scripts]
mcp-multivision-server = "mcp_multivision_server.server:run"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/mcp_multivision_server"]
