[project]
name = "mcp-multivision-server"
version = "2.0.0"
description = "MCP Multivision Server - Cloud image & video analysis for LLM agents (OpenAI-compatible vision models, native video via Qwen3.5)"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
    { name = "ganyu" }
]
keywords = ["mcp", "vision", "multimodal", "image", "video", "ocr", "vlm", "server"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "mcp>=1.0.0",
    "httpx>=0.27.0",
    "pydantic>=2.0.0",
    "python-dotenv>=1.0.0",
    "pillow>=10.0.0",
]

[project.optional-dependencies]
sse = [
    "starlette>=0.37.0",
    "uvicorn>=0.30.0",
]

[project.scripts]
mcp-multivision-server = "mcp_multivision_server.server:run"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/mcp_multivision_server"]
